local/deployment_echo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        ports:
          - containerPort: 8080
