local/service_echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
spec:
  ports:
    - port: 80 # access service
      targetPort: 8080 # target the deployment
      protocol: TCP
      name: http
  selector:
    app: echo
